--- a/templates/practice/details.html
+++ b/templates/practice/details.html
@@ -19,11 +19,11 @@
                 <th class="align-middle" scope="row">Status</th>
                 <th class="align-middle" scope="row">
                     <div class="btn-toolbar justify-content-between">
-                        <h5 class="mt-1"><span class="mt-1 badge {{ "badge-" + config.STATUS_BADGE_STYLE[practice.status] }}">{{ practice.status|capitalize }}</span></h5>
+                        <h5 class="mt-1"><span class="mt-1 badge {{ "badge-" +  config.STATUS_BADGE_STYLE[practice.status] }}">{{ practice.status|capitalize }}</span></h5>
                         <form action="{{ url_for("practice.action", id=practice.id, query=query, page=page) }}" method="post">
                         {% for action in actions %}
                             {% if "ACTION_" + action["action"] in g.permissions %}
-                                <input class="btn {{ config.ACTION_STYLE    [action["action"]] }}" style="width: 90px;" name="action" type="submit" value="{{ action["action"]|capitalize }}"/>
+                                <input class="btn {{  config.ACTION_STYLE[action["action"]] }}" style="width: 90px;" name="action" type="submit" value="{{ action["action"]|capitalize }}"/>
                             {% endif %}
                         {% endfor %}
                         </form>
@@ -35,7 +35,7 @@
                 <td>{{ practice.title }}</td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.intervention_name not in config.INTERVENTION_NAMES %}class="flex-fill bg-warning" {% endif %}>Intervention name</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.intervention_name not in  master["INTERVENTION_NAMES"] %}class="flex-fill bg-warning" {% endif %}>Intervention name</span></th>
                 <td>{{ practice.intervention_name }}</td>
             </tr>
             <tr>
@@ -51,7 +51,7 @@
                 <td>{{ practice.citation }}</td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.program_success not in config.PROGRAM_SUCCESSES %}class="flex-fill bg-warning" {% endif %}>Program success</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.program_success not in  master["PROGRAM_SUCCESSES"] %}class="flex-fill bg-warning" {% endif %}>Program success</span></th>
                 <td>{{ practice.program_success }}</td>
             </tr>
             <tr>
@@ -59,77 +59,77 @@
                 <td>{{ practice.city }}</td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.geography | reject("in", config.STATES) | first %}class="flex-fill bg-warning" {% endif %}>Geography</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.geography | reject("in",  master["STATES"]) | first %}class="flex-fill bg-warning" {% endif %}>Geography</span></th>
                 <td>
                 {% for state in practice.geography %}
-                    <span class="badge {% if state in config.STATES %}badge-info{% else %}badge-danger{% endif %}">{{ state }}</span>
+                    <span class="badge {% if state in  master["STATES"] %}badge-info{% else %}badge-danger{% endif %}">{{ state }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.region | reject("in", config.REGIONS) | first %}class="flex-fill bg-warning" {% endif %}>Region</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.region | reject("in",  master["REGIONS"]) | first %}class="flex-fill bg-warning" {% endif %}>Region</span></th>
                 <td>
                 {% for region in practice.region %}
-                    <span class="badge {% if region in config.REGIONS %}badge-info{% else %}badge-danger{% endif %}">{{ region }}</span>
+                    <span class="badge {% if region in  master["REGIONS"] %}badge-info{% else %}badge-danger{% endif %}">{{ region }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.source_type not in config.SOURCE_TYPES %}class="flex-fill bg-warning" {% endif %}>Source type</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.source_type not in  master["SOURCE_TYPES"] %}class="flex-fill bg-warning" {% endif %}>Source type</span></th>
                 <td>{{ practice.source_type }}</td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.race | reject("in", config.RACES) | first %}class="flex-fill bg-warning" {% endif %}>Race</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.race | reject("in",  master["RACES"]) | first %}class="flex-fill bg-warning" {% endif %}>Race</span></th>
                 <td>
                 {% for race in practice.race %}
-                    <span class="badge {% if race in config.RACES %}badge-info{% else %}badge-danger{% endif %}">{{ race }}</span>
+                    <span class="badge {% if race in  master["RACES"] %}badge-info{% else %}badge-danger{% endif %}">{{ race }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.intervention_goal | reject("in", config.INTERVENTION_GOALS) | first %}class="flex-fill bg-warning" {% endif %}>Intervention goal</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.intervention_goal | reject("in",  master["INTERVENTION_GOALS"]) | first %}class="flex-fill bg-warning" {% endif %}>Intervention goal</span></th>
                 <td>
                 {% for intervention_goal in practice.intervention_goal %}
-                    <span class="badge {% if intervention_goal in config.INTERVENTION_GOALS %}badge-info{% else %}badge-danger{% endif %}">{{ intervention_goal }}</span>
+                    <span class="badge {% if intervention_goal in  master["INTERVENTION_GOALS"] %}badge-info{% else %}badge-danger{% endif %}">{{ intervention_goal }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.implementers | reject("in", config.IMPLEMENTERS) | first %}class="flex-fill bg-warning" {% endif %}>Implementers</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.implementers | reject("in",  master["IMPLEMENTERS"]) | first %}class="flex-fill bg-warning" {% endif %}>Implementers</span></th>
                 <td>
                 {% for implementer in practice.implementers %}
-                    <span class="badge {% if implementer in config.IMPLEMENTERS %}badge-info{% else %}badge-danger{% endif %}">{{ implementer }}</span>
+                    <span class="badge {% if implementer in  master["IMPLEMENTERS"] %}badge-info{% else %}badge-danger{% endif %}">{{ implementer }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.scale | reject("in", config.SCALES) | first %}class="flex-fill bg-warning" {% endif %}>Scale</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.scale | reject("in",  master["SCALES"]) | first %}class="flex-fill bg-warning" {% endif %}>Scale</span></th>
                 <td>
                 {% for scale in practice.scale %}
-                    <span class="badge {% if scale in config.SCALES %}badge-info{% else %}badge-danger{% endif %}">{{ scale }}</span>
+                    <span class="badge {% if scale in  master["SCALES"] %}badge-info{% else %}badge-danger{% endif %}">{{ scale }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.country | reject("in", config.COUNTRIES) | first %}class="flex-fill bg-warning" {% endif %}>Country</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.country | reject("in",  master["COUNTRIES"]) | first %}class="flex-fill bg-warning" {% endif %}>Country</span></th>
                 <td>
                 {% for country in practice.country %}
-                    <span class="badge {% if country in config.COUNTRIES %}badge-info{% else %}badge-danger{% endif %}">{{ country }}</span>
+                    <span class="badge {% if country in  master["COUNTRIES"] %}badge-info{% else %}badge-danger{% endif %}">{{ country }}</span>
                 {% endfor %}
                 </td>
             </tr>
-            <th scope="row" class="d-flex"><span {% if practice.program_components | reject("in", config.PROGRAM_COMPONENTS) | first %}class="flex-fill bg-warning" {% endif %}>Program components</span></th>
+            <th scope="row" class="d-flex"><span {% if practice.program_components | reject("in",  master["PROGRAM_COMPONENTS"]) | first %}class="flex-fill bg-warning" {% endif %}>Program components</span></th>
                 <td>
                 {% for program_component in practice.program_components %}
-                    <span class="badge {% if program_component in config.PROGRAM_COMPONENTS %}badge-info{% else %}badge-danger{% endif %}">{{ program_component }}</span>
+                    <span class="badge {% if program_component in  master["PROGRAM_COMPONENTS"] %}badge-info{% else %}badge-danger{% endif %}">{{ program_component }}</span>
                 {% endfor %}
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="d-flex"><span {% if practice.population | reject("in", config.POPULATIONS) | first %}class="flex-fill bg-warning" {% endif %}>Population</span></th>
+                <th scope="row" class="d-flex"><span {% if practice.population | reject("in",  master["POPULATIONS"]) | first %}class="flex-fill bg-warning" {% endif %}>Population</span></th>
                 <td>
                 {% for population in practice.population %}
-                    <span class="badge {% if population in config.POPULATIONS %}badge-info{% else %}badge-danger{% endif %}">{{ population }}</span>
+                    <span class="badge {% if population in  master["POPULATIONS"] %}badge-info{% else %}badge-danger{% endif %}">{{ population }}</span>
                 {% endfor %}
                 </td>
             </tr>
