--- a/templates/practice/create.html
+++ b/templates/practice/create.html
@@ -31,7 +31,7 @@
                     <td>
                         <select class="custom-select" name="intervention_name">
                             <option value="Not selected">Not selected</option>
-                            {% for intervention_name in config.INTERVENTION_NAMES %}
+                            {% for intervention_name in  master["INTERVENTION_NAMES"] %}
                                 <option value="{{ intervention_name }}">{{ intervention_name }}</option>
                             {% endfor %}
                         </select>
@@ -60,7 +60,7 @@
                     <td>
                         <select class="custom-select" name="program_success">
                             <option value="Not selected" selected>Not selected</option>
-                            {% for program_success in config.PROGRAM_SUCCESSES %}
+                            {% for program_success in  master["PROGRAM_SUCCESSES"] %}
                                 <option value="{{ program_success }}">{{ program_success }}</option>
                             {% endfor %}
                         </select>
@@ -76,7 +76,7 @@
                     <th scope="row">Geography</th>
                     <td>
                         <select class="custom-select" multiple name="geography">
-                            {% for state in config.STATES %}
+                            {% for state in  master["STATES"] %}
                                 <option value="{{ state }}">{{ state }}</option>
                             {% endfor %}
                         </select>
@@ -86,7 +86,7 @@
                     <th scope="row">Region</th>
                     <td>
                         <select class="custom-select" multiple name="region">
-                            {% for region in config.REGIONS %}
+                            {% for region in  master["REGIONS"] %}
                                 <option value="{{ region }}">{{ region }}</option>
                             {% endfor %}
                         </select>
@@ -97,7 +97,7 @@
                     <td>
                         <select class="custom-select" name="source_type">
                             <option value="Not selected" selected>Not selected</option>
-                            {% for source_type in config.SOURCE_TYPES %}
+                            {% for source_type in  master["SOURCE_TYPES"] %}
                                 <option value="{{ source_type }}">{{ source_type }}</option>
                             {% endfor %}
                         </select>
@@ -107,7 +107,7 @@
                     <th scope="row">Race</th>
                     <td>
                         <select class="custom-select" multiple name="race">
-                            {% for race in config.RACES %}
+                            {% for race in  master["RACES"] %}
                                 <option value="{{ race }}">{{ race }}</option>
                             {% endfor %}
                         </select>
@@ -117,7 +117,7 @@
                     <th scope="row">Intervention goal</th>
                     <td>
                         <select class="custom-select" multiple name="intervention_goal">
-                            {% for goal in config.INTERVENTION_GOALS %}
+                            {% for goal in  master["INTERVENTION_GOALS"] %}
                                 <option value="{{ goal }}">{{ goal }}</option>
                             {% endfor %}
                         </select>
@@ -127,7 +127,7 @@
                     <th scope="row">Implementers</th>
                     <td>
                         <select class="custom-select" multiple name="implementers">
-                            {% for implementer in config.IMPLEMENTERS %}
+                            {% for implementer in  master["IMPLEMENTERS"] %}
                                 <option value="{{ implementer }}">{{ implementer }}</option>
                             {% endfor %}
                         </select>
@@ -137,7 +137,7 @@
                     <th scope="row">Scale</th>
                     <td>
                         <select class="custom-select" multiple name="scale">
-                            {% for scale in config.SCALES %}
+                            {% for scale in  master["SCALES"] %}
                                 <option value="{{ scale }}">{{ scale }}</option>
                             {% endfor %}
                         </select>
@@ -147,7 +147,7 @@
                     <th scope="row">Country</th>
                     <td>
                         <select class="custom-select" multiple name="country">
-                            {% for country in config.COUNTRIES %}
+                            {% for country in  master["COUNTRIES"] %}
                                 <option value="{{ country }}">{{ country }}</option>
                             {% endfor %}
                         </select>
@@ -157,7 +157,7 @@
                     <th scope="row">Program components</th>
                     <td>
                         <select class="custom-select" multiple name="program_components">
-                            {% for component in config.PROGRAM_COMPONENTS %}
+                            {% for component in  master["PROGRAM_COMPONENTS"] %}
                                 <option value="{{ component }}">{{ component }}</option>
                             {% endfor %}
                         </select>
@@ -167,7 +167,7 @@
                     <th scope="row">Population</th>
                     <td>
                         <select class="custom-select" multiple name="population">
-                            {% for population in config.POPULATIONS %}
+                            {% for population in  master["POPULATIONS"] %}
                                 <option value="{{ population }}">{{ population }}</option>
                             {% endfor %}
                         </select>
