Password management added.

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
                          </form>
                     {% endif %}
                     <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{{ url_for('auth.password') }}">Password</a>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
                 </div>
             </div>
