--- a/templates/auth/password.html
+++ b/templates/auth/password.html
@@ -1,45 +1,38 @@
 {% extends 'base.html' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Password change{% endblock %}
 
 {% block content %}
     <form class="needs-validation" method="post" novalidate>
         <div class="card my-2">
             <div class="card-header">
-                Create new account
+                Change your password
             </div>
             <div class="card-body">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input class="form-control" name="username" id="username" placeholder="Enter username" required autofocus>
+                    <label for="username">Enter current password</label>
+                    <input type="password" class="form-control" id="current_password" name="current_password" placeholder="Current password" required autofocus>
                     <div class="invalid-feedback">
-                        Please provide a username.
+                        Please provide your current password.
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="fullname">Full name</label>
-                    <input class="form-control" name="fullname" id="fullname" placeholder="Enter full name" required>
-                    <div class="invalid-feedback">
-                        Please provide a full name.
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                    <label for="password">Enter new password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="New password" required>
                     <div class="invalid-feedback">
                         Please choose a password.
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="confirm_password">Confirm password</label>
-                    <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder=" Confirm password" required>
+                    <label for="confirm_password">Confirm new password</label>
+                    <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder=" Confirm password" required>
                     <div class="invalid-feedback">
                         Passwords don't match.
                     </div>
                 </div>
                 <div class="mt-4">
-                    <button type="submit" class="btn btn-primary">Register</button>
-                    <small class="ml-2"> or <a href="{{ url_for('auth.login') }}">sign in</a> to existing account</small>
+                    <a class="btn btn-secondary mr-2" href="{{ url_for("practice.index") }}">Cancel</a>
+                    <button type="submit" class="btn btn-primary">Change</button>
                 </div>
             </div>
         </div>
